--- a/templates/films.html
+++ b/templates/films.html
@@ -1,29 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Films</title>
-</head>
-<body>
-<style>
-    a {
-    display:block
-    }
-</style>
-<a href="/films"><button>All</button></a>
-{% for genres in genre %}
-<a href="/genre/{{genres.id}}/films"><button>{{ genres.title }}</button></a>
-{% endfor%}
-<h1> {{ title }}</h1>
-{% for i in film_list%}
-<div>
-    <h3>Name - {{ i.name }}</h3>
-    <h4>Producer - {{ i.producer }}</h4>
-    <p>Rating - {{ i.rating }}</p>
-    <span>Duration - {{ i.duration }}</span>
-    <a href="/films/{{i.id}}"><button>More...</button></a>
-    <hr>
+{% extends 'layout.html'%}
+{% load static %}
+{% block content %}
+    <h1> {{ title }}</h1>
+    {% for i in film_list%}
+        <div class="card" style="width: 18rem; margin:10px">
+            <img src="{{ i.image.url }}" style="width:200px; height:200px; margin:30px" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">{{ i.name }}</h5>
+                    <p class="card-text">{{ i.genre.title }}</p>
+                     <a href="/films/{{i.id}}" class="btn btn-primary">More...</a>
+                </div>
 </div>
-{% endfor %}
-</body>
-</html>
+        {% endfor %}
+{% endblock %}
