--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>VI KA</title>
-</head>
-<body>
+{% extends 'layout.html'%}
+{% block content %}
 <div class="about-section">
   <h1>About Us Page</h1>
   <p>Some text about who we are and what we do.</p>
@@ -52,5 +47,4 @@
     </div>
   </div>
 </div>
-</body>
-</html>
+{% endblock%}
