--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,31 +29,28 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/films/">Все фильмы</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/add_films/">Добавить фильм</a>
-                </li>
                 {% for genres in genre%}
                 <li class="nav-item">
                     <a class="nav-link" href="/genre/{{genres.id}}/films">{{genres.title}}</a>
                 </li>
                 {% endfor%}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                       aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
+                {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link" href="/add_films/">Добавить фильм</a>
                 </li>
+                {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/register/">Регистрация</a>
+                </li>
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout/">Выйти({{ user }})</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/login/">Войти</a>
+                </li>
+                {% endif %}
             </ul>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
