--- a/templates/layout.html
+++ b/templates/layout.html
@@ -52,8 +52,9 @@
                 </li>
                 {% endif %}
             </ul>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <form class="d-flex" role="search" action="/search/" method="get">
+                <input class="form-control me-2" type="search" name="search_word"
+                       placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
         </div>
